...
        tableView.translatesAutoresizingMaskIntoConstraints = false
        return tableView
    }()
    
    override func viewDidLoad() {
        super.viewDidLoad()
        navigationItem.title = "Repositórios"
        navigationController?.navigationBar.tintColor = .darkGray
        setupLoadingView()
        setupLoadingActivityIndicator()
        fillData()
    }
    
...
